demos/kubernetes/node-demo/staging/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: devops-demo-staging
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.devops-demo: "glob:*"
  labels:
    app: devops-demo
    environment: staging
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: devops-demo
        environment: staging
    spec:
      containers:
      - image: gcr.io/devops-hof/node-demo:62d37a8fb2cc274deb62a78925083e67b1c7d076
        name: devops-demo
        resources:
          limits:
            cpu: "100m"
            memory: "200Mi"
        ports:
        - containerPort: 3000
          name: nodejs
      restartPolicy: Always
