demos/kubernetes/node-demo/staging/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: devops-demo
    environment: staging
  name: devops-demo-staging
spec: 
  ports: 
    - 
      name: nodejs
      port: 3000
      targetPort: 3000
  selector: 
    app: devops-demo
    environment: staging
  type: ClusterIP
