demos/kubernetes/node-demo/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
  labels:
    app: devops-demo
    environment: staging
  name: devops-demo-staging
spec:
  rules:
    -
      host: staging.devops-hof.de
      http:
        paths:
          -
            backend:
              serviceName: devops-demo-staging
              servicePort: 3000
            path: /
  tls:
    -
      hosts:
        - staging.devops-hof.de
      secretName: staging.devops-hof.de
